# DwarfBell

./: .gitignore  .prod.env  Dockerfile  README.md  bot.py  docker-compose.yaml  docker-entrypoint.sh  main.py  pyproject.toml  routes.py
app/: bot.py  main.py  redis_pool.py  rest_client.py  routes.py  settings.py  solve_queue_worker.py  solves_pool.py  system.py
app/handlers/: __init__.py  fetch_commands.py  general_commands.py  management_commands.py  solves_command.py  utils.py
app/models/: challenge.py  challenge_lite.py
handlers/: __init__.py  messages.py
src/: bot.py  redis_pool.py  rest_client.py  system.py
src/handlers/: __init__.py  general_commands.py  management_commands.py
