[tool.poetry]
name ="Dwarf CTF bot (AIOGram + FastAPI + Redis)"
version = "0.1.0"
description = "ctfd + aiogram + fastapi + redis"
authors = ["ijo42 <admin@ijo42.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
httpx = "^0.25.0"
aiogram = "^3.1.1"
redis = "^5.0.0"
loguru = "^0.7.2"
pydantic-settings = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
